# RustPlayground

./: .gitignore
ollama_chat/: Cargo.toml  README.md
ollama_chat/src/: main.rs
ollama_chat2/: Cargo.toml  README.md
ollama_chat2/src/: main.rs
ollama_lohengrin/: Cargo.toml  README.md
ollama_lohengrin/src/: main.rs
speech2text/: Cargo.toml
speech2text/src/: main.rs
text2speech/: Cargo.toml
text2speech/src/: main.rs
