[package]
name = "ollama_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = "0.3.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
anyhow = "1"
